# Djinn

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cookiecutter.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  testproject.md  todos.md
.github[remove_this]/workflows/: master.yml
.github_actions/workflows/: master.yml  pr.yml
code_generator/: generator.py  parser.py  serializer.py
common/: permissions.py  utils.py
core/migrations/: 0002_delete_task.py
core/models/: task.py
djinn/: conftest.py  manage.py
djinn/code_generator/: base.py  cli.py  consts.py  example_serializers.py  generator.py  models.py  pyproject.toml  serializer.py  setup.py  user_serializer.py  utils.py  views.py
djinn/code_generator/diff/: __init__.py  diff.py  serializer.py  urls.py
djinn/code_generator/generators/: __init__.py  app.py  model.py  serializer.py  urls.py  views.py
djinn/code_generator/source/: models.py  serializers.py  text_choice.py  urls.py  views.py
djinn/code_generator/src/diff/: diff.py
djinn/code_generator/src/generators/: model.py
djinn/code_generator/src/source/: views.py
djinn/code_generator/src/source/app/: apps.py
djinn/code_generator/src/source/user/: apps.py
djinn/common/: permissions.py
djinn/core/: admin.py  urls.py
djinn/project/: urls.py  wsgi.py
djinn/user/: urls.py
djinn/users/: urls.py
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
local/: settings.dev.py  settings.unittests.py
project/: asgi.py  settings.py  urls.py
scripts/: entrypoint.sh
tests/: test.py
{{cookiecutter.module_name}}/: conftest.py  manage.py
{{cookiecutter.module_name}}/authentication/: apps.py
{{cookiecutter.module_name}}/common/: authentication.py
{{cookiecutter.module_name}}/core/: apps.py
{{cookiecutter.module_name}}/project/: asgi.py  urls.py
{{cookiecutter.module_name}}/users/: apps.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/scripts/: entrypoint.sh
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/common/: authentication.py
{{cookiecutter.project_slug}}/core/: admin.py
{{cookiecutter.project_slug}}/local/: settings.unittests.py
{{cookiecutter.project_slug}}/project/: urls.py
{{cookiecutter.repo_name}}/: pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/code_generator/: pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/code_generator/src/: base.py
(+128 files in other folders)
