[tool.poetry]
name = "djinn"
version = "0.1.0"
description = "A starter template for django project with super powers"
authors = ["farhan <Www.mfarvirus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
libcst = "^1.1.0"
astor = "^0.8.1"
typer = {extras = ["all"], version = "^0.9.0"}
pre-commit = "^3.6.2"

[tool.isort]
line_length = 119
multi_line_output = 5

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
